# asd-project

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  get_timings.py  input.txt  main.cpp  timings.csv
include/: input_handeler.h  main.h  timings.h
src/: input_handeler.cpp  timings.cpp
